# hf_hydrodata

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  create_tag.sh  publish_pypi.sh  pyproject.toml  requirements.txt
.github/workflows/: run-unit-tests-private.yaml  run-unit-tests-public.yaml  run-unit-tests.yaml
build_docs/: Makefile  build.sh  build_maurice.sh  generate_docs.py
build_docs/source/: api_reference.rst  conf.py  gen_NLDAS2_85.rst  gen_NLDAS3.rst  gen_conus1_baseline_85.rst  gen_conus1_baseline_mod.rst  gen_conus1_current_conditions.rst  gen_conus1_domain.rst  gen_conus2_current_conditions.rst  gen_conus2_domain.rst  gen_conus2_grid.rst  gen_dataset_list.rst  gen_huc_mapping.rst  gen_nasa_smap.rst  gen_nldas2.rst  gen_obs_anomalies.rst  gen_observations.rst  getting_started.rst  gridded_data.rst  hf_hydrodata.data_access.rst  hf_hydrodata.rst  index.rst  point_observation_data.rst  quickstart.rst
docs/: Makefile  api_reference.html  build.sh  data_catalog.html  dataset_text.yaml  gen_NLDAS2_85.html  gen_NLDAS3.html  gen_conus1_baseline_85.html  gen_conus1_baseline_mod.html  gen_conus1_current_conditions.html  gen_conus1_domain.html  gen_conus2_current_conditions.html  gen_conus2_domain.html  gen_conus2_grid.html  gen_dataset_list.html  gen_datasets.html  gen_huc_mapping.html  gen_nasa_smap.html  gen_nldas2.html  gen_obs_anomalies.html  gen_observations.html  generate_docs.py  generate_docs_options.py  genindex.html  getting_started.html  gridded_data.html  hf_hydrodata.data_access.html  hf_hydrodata.data_model_access.html  hf_hydrodata.generate_hydrodata_catalog_yaml.html  hf_hydrodata.grid.html  hf_hydrodata.gridded.html  hf_hydrodata.html  hf_hydrodata.point.html  hf_hydrodata.projection.html  index.html  make.bat  modules.html  point_observation_data.html  py-modindex.html  quickstart.html  (+3 more)
docs/examples/: example_point.html  example_point.ipynb  index.html
docs/point_data/: data_collection.html  index.html  metadata_definitions.html  point_inputs.html
docs/source/: api_reference.rst  available_aggregations.rst  available_data.rst  conf.py  (+21 more)
paper/: paper.bib  paper.md
utils/: create_schema.ddl  development_reset.py  drop_and_recreate_schema.ddl  model_to_sql.py  public_release.ddl  public_release.py  set_credentials.py  update_dates_from_hydrodata.py  update_schema_1.ddl
(+88 files in other folders)
