[tool.poetry]
name = "hf_hydrodata"
version = "1.1.0"
description = "hydroframe tools and utilities"
authors = ["William M. Hasling", "Laura Condon", "Reed Maxwell",  "George Artavanis", "Amy M. Johnson", "Amy C. Defnet"]
license = "MIT"
readme = "README.md"

[package]
include = ["src/hf_hydrodata/model/*.csv"]


[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.23.5"
xarray = ">=0.21.0"
netcdf4 = ">=1.6.0"
importlib-resources = ">=5.10.0"
pftools = ">=1.3.9"
pyproj = ">=3.5.0"
#rioxarray = ">=0.13.4"
requests = ">=2.28.2"
scipy = ">=1.10.0"
dask = ">=2020.12.0"
pyshp = ">=2.3.1"
shapely = ">=2.0.2"
# rasterio = ">=1.3.9"

[tool.poetry.dev-dependencies]
sphinx = ">=6.1.3"
sphinx-rtd-theme = ">=1.2.0"
sphinxcontrib-napoleon = ">=0.7"
pytest-mock = ">=3.10.0"
pylint = ">=2.13.7"
black = ">=23.3.0"
twine = ">=4.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
